syntax = "proto3";
option java_multiple_files = true;
package org.baeldung.grpc;

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;
}

message Period {
  string startDate = 1;
  string endDate = 2;
}

message PeriodRange {
  string startDate = 1;
  string endDate = 2;
  string secondStartDate = 3;
  string secondEndDate = 4;
}

message CategoryScore {
  string category = 1;
  int32 ratings = 2;
  int32 score = 3;
  repeated Date dates = 4;
  repeated Week weeks = 5;
}

message Week {
  string week = 1;
  int32 score = 2;
}

message Date {
  string date = 1;
  int32 score = 2;
}

message CategoryScoreResponse {
  repeated CategoryScore categoryScoreList = 1;
}

message ScoresByTicket {
  int32 ticketId = 1;
  repeated Category categories = 2;
}

message Category {
  string category = 1;
  int32 score = 2;
}

message ScoresByTicketResponse {
  repeated ScoresByTicket scoresByTicketList = 1;
}

message OverallScoreResponse {
  int32 score = 1;
}

service ScoringService {
  rpc hello(HelloRequest) returns(HelloResponse);
  rpc getCategoryScore(Period) returns (CategoryScoreResponse);
  rpc getScoresByTicket(Period) returns (ScoresByTicketResponse);
  rpc getOverallScore(Period) returns (OverallScoreResponse);
  rpc getOverallScoreChange(PeriodRange) returns(OverallScoreResponse);
}